Fix tag overflow

--- a/src/FilterTags.css
+++ b/src/FilterTags.css
@@ -15,6 +15,9 @@
   gap: 0.5em;
   flex: 1;
   cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .filter-tag-column {
